# simple-drf

./: .dockerignore  Dockerfile  LICENSE  README.md  appconfig.example.env  deploy.py  gunicorn-docker-cmd  justfile  manage.py  pyproject.toml  rename.sh
ansible/roles/django/files/: appconfig.env  deploy-app.py
ansible/roles/django/tasks/: main.yml
ansible/roles/nginx/files/: 503.html
simple_drf/: asgi.py  settings.py  urls.py  wsgi.py
simple_drf/accounts/: admin.py  apps.py  models.py
simple_drf/accounts/api/: serializers.py  urls.py  views.py
simple_drf/accounts/tests/: factories.py
simple_drf/core/: apps.py
